fixed line and bullet alignment

--- a/client/src/component/Accordion/section.scss
+++ b/client/src/component/Accordion/section.scss
@@ -1,11 +1,18 @@
 .line{
   border-left: 3px solid white;
   margin-left: 6px;
+  overflow-x: visible;
+}
+
+.line2{
+  border-left: 3px double white;
+  margin-left: 6px;
+  padding: 3px 10px 3px 30px;
 }
 
 .bullet{
   padding: 0px 15px 0px 0px;
-  margin-left: -6px;
+  margin-left: -7px;
   font-size: 20px;
 }
 
